# cybersecgpt-bootstrap

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: .gitkeep  bootstrap.yaml  repositories.yaml
docs/: README.md
src/csgpt/: __init__.py  bootstrap.py  cli.py  config.py  doctor.py  github.py  repository.py  templates.py  utils.py
templates/bootstrap/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
templates/bootstrap/configs/: app.yaml
templates/bootstrap/docs/: architecture.md  development.md  installation.md
templates/bootstrap/scripts/: bootstrap  clean  lint
templates/bootstrap/src/{{ package_name }}/: __init__.py  cli.py  config.py  logging.py  version.py
templates/bootstrap/tests/: test_cli.py  test_import.py  test_version.py
tests/: __init__.py  test_cli.py  test_cli_repo_list.py  test_config.py  test_doctor.py  test_doctor_workspace_root.py  test_entrypoint.py  test_placeholder_components.py  test_repository.py  test_repository_manager.py
