[project]
name = "cybersecgpt-bootstrap"
version = "0.1.0"
description = "Bootstrap utilities for CyberSecGPT (scaffold)."
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "CyberSecGPT Team", email = "devs@example.com" } ]
license = { text = "MIT" }

dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://example.com/cybersecgpt"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[project.scripts]
csgpt = "csgpt.cli:main"

[build-system]
requires = ["setuptools>=61.0","wheel","build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
extend-select = ["E", "F", "W", "C", "N"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
